Fixing margin that cut off icons in about article section for larger breakpoints

--- a/_sass/index/_index.scss
+++ b/_sass/index/_index.scss
@@ -145,7 +145,7 @@
 
         @include media($min-medium-screen) {
           font-size: 4em;
-          margin: -.95em auto .25em;
+          margin: 0 auto .25em;
         };
       }
 
